--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -8,7 +8,7 @@ autoinstall:
         username: user
         # Replace this hash with your own secure password hash.
         password: "<password hash>"
-        hostname: computer-name
+        hostname: dispatch-station
 
     # Minimal package installation for thin client
     packages:
@@ -37,8 +37,9 @@ autoinstall:
         variant: ""
 
     # Locale and timezone settings
-    locale: "en_US.UTF-8"
-    timezone: "Etc/UTC"
+    locale: "en_GB.UTF-8"
+    timezone: "Europe/London"
+
 
     # APT configuration to enable unattended upgrades
     apt:
